committed by gaurav

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ http://www.tooplate.com/view/2098-health
                                         <br>
                                         <div class="form-group row justify-content-end">
                                              <div class="col-sm-5">
-                                                  <button type="submit" class="btn btn-form" style="background-color: rgb(215, 159, 74);">
+                                                  <button type="submit" class="btn btn-form" style="background-color: #fd8f00;">
                                                        MAKE AN APPOINTMENT
                                                   </button>
                                              </div>
@@ -245,15 +245,6 @@ http://www.tooplate.com/view/2098-health
                                    
                                    <center><h3 class="tittle-one"><a name="about" _msttexthash="93587" _msthash="25"> About Us</a></h3></center>
                               </div>
-                              <div class="col-md-6 welcome-left">
-                                   <div class="welcome-img">
-                                        <img src="images/img5.jpg" class="img-responsive zoom-img" alt="">
-                                        <!-- </div>
-                                   <h3><font color="000080" _msttexthash="97253" _msthash="26"><br>Mission</font></h3>
-                                   <p _msttexthash="134300621" _msthash="27">At Matoshree Hospital our aim is to provide exceptional quality comprehensive treatment at affordable prices in a pleasant environment.
-                                   <br>With a wide range of diagnostic screening and testing, cutting edge medical equipments and a crew of seasoned pediatrician, insightful doctors and wellbeing annual health checkups for kids- we are the ultimate pediatric clininc for you.
-                                    We Care About You and Your Child's Health. We provide best medical services that you can trust. We care about your child more than anything else.</p>
-                              </div> -->
                                         <div class="w3ls-row">
                                              <div class="col-md-12 welcome-left" style="text-align: center;">
                                                   <h3>
@@ -277,27 +268,6 @@ http://www.tooplate.com/view/2098-health
                                                        I enjoy working in an environment where I can spend extra time
                                                        with my patients and their family" - Dr. Shyam Durgude.
                                                   </p>
-                                                  <!-- <div class="open-hours-row">
-                                                       <h3>
-                                                            <font color="000080" _msttexthash="78884" _msthash="30">
-                                                                 <br>OPENING HOURS
-                                                            </font>
-                                                       </h3>
-
-
-                                                       <div class="col-md-3 open-hours-left">
-                                                            <h6 _msttexthash="95771" _msthash="31">Morning</h6>
-                                                            <h5 _msttexthash="88127" _msthash="32">10am - 3pm</h5>
-                                                       </div>
-                                                       <div class="col-md-3 open-hours-left">
-                                                            <h6 _msttexthash="94250" _msthash="33">Evening</h6>
-                                                            <h5 _msttexthash="88335" _msthash="34">5pm - 10pm</h5>
-                                                       </div>
-                                                       <div class="col-md-3 open-hours-left">
-                                                            <h6 _msttexthash="78338" _msthash="35">Sunday</h6>
-                                                            <h5 _msttexthash="88127" _msthash="36">10am - 3pm</h5>
-                                                       </div> -->
-                                                       <!-- <div class="clearfix"> </div> -->
                                                   </div>
 
                                              </div>
@@ -325,6 +295,7 @@ http://www.tooplate.com/view/2098-health
                                                        more than anything else.
                                                   </p>
                                              </div>
+
                                         </div>
 
                                    </div>
