committed by gaurav

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ http://www.tooplate.com/view/2098-health
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa-solid fa-square-m"></i>Matoshri Hospital</a>
+                    <!-- <a href="index.html" class="navbar-brand"><i class="fa-solid fa-square-m"></i>Matoshri Hospital</a> -->
+                    <a href="index.html"><img src="images/mhl.png" alt="" class="img-fluid" width="180" height="45" ></a>
                </div>
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
@@ -335,6 +336,7 @@ http://www.tooplate.com/view/2098-health
                          <div class="news-info">
                               <span></span>
                               <h3><a>Child Care</a></h3>
+                              <br>
                               <p>We have expertise in child health care. Fever, Infections, Seasonal allergies, Common cold, Heath injury, in all critical conditions, we are available 24x7 for you</p>
                          </div>
                     </div>
@@ -348,7 +350,7 @@ http://www.tooplate.com/view/2098-health
                          </a>
                          <div class="news-info">
                               <span></span>
-                              <h3><a>Newborn Care and Vaccinations</a></h3>
+                              <h3><a>Newborn Care & Vaccinations</a></h3>
                               <p>We are specialist in taking care of new born. Starting from the first health checkup to all kind of vaccinations for your infant, we are one of the most reliable soultion</p>
                          </div>
                     </div>
@@ -363,7 +365,8 @@ http://www.tooplate.com/view/2098-health
                          <div class="news-info">
                               <span></span>
                               <h3><a>Emergency On-site Services</a></h3>
-                              <p>We provide 24x7 child care services. We are just a phone call away for your emergency</p>
+                              <br>
+                              <p>We provide 24x7 child care services. <br> We are just a phone call away for your emergency</p>
                          </div>
                     </div>
                </div>
@@ -376,9 +379,10 @@ http://www.tooplate.com/view/2098-health
                          <div class="news-info">
                               <span></span>
                               <h3><a>Medical professionals</a></h3>
-                              <p>  Dr. Shyam Durgude <br>
-                                   B.A.M.S, DCH, CCH <br> P.G.D.E.M.S.
-                                   Pediatrican</p>
+                              <br>
+                              <p> Dr. Shyam Durgude <br>
+                                   B.A.M.S, DCH, CCH <br>
+                                   P.G.D.E.M.S<br> Pediatrican</p>
                               
                          </div>
                     </div>
