committed by gaurav

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ http://www.tooplate.com/view/2098-health
 
                     <!-- lOGO TEXT HERE -->
                     <!-- <a href="index.html" class="navbar-brand"><i class="fa-solid fa-square-m"></i>Matoshri Hospital</a> -->
-                    <a href="index.html"><img src="images/mhl.png" alt="" class="img-fluid" width="180" height="50" ></a>
+                    <a href="index.html"><img src="images/logo.png" alt="" class="img-fluid" width="180" height="50" ></a>
                </div>
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
