commited by amol

--- a/index.html
+++ b/index.html
@@ -181,11 +181,7 @@ http://www.tooplate.com/view/2098-health
                                              </div>
                                         </div>
                                         <!---->
-                                        <div class="col-md-8 col-sm-8">
-                                             <label for="email">Email</label>
-                                             <input type="email" class="form-control" id="email" name="email"
-                                                  placeholder="Your Email">
-                                        </div>
+                                        
                                         <div class="form-group row">
                                              <label class="col-sm-4 col-lg-4">
                                                   Reason for Visit
@@ -213,15 +209,16 @@ http://www.tooplate.com/view/2098-health
                                         </div>
                                         
                                         <!---->
-                                        <!-- <div class="form-group row">
+                                        <div class="form-group row">
                                              <label class="col-sm-4 col-lg-4">
-                                                  Symptoms
+                                             Email
                                              </label>
                                              <div class="col-sm-8 col-lg-8">
-                                                  <textarea id="symptoms" class="form-control" required></textarea>
+                                                  <input type="email" id="email" class="form-control" placeholder="Your Email" name="email">
                                              </div>
-                                        </div> -->
+                                        </div>
                                         <!---->
+
                                         <br>
                                         <div class="form-group row justify-content-end">
                                              <div class="col-sm-5">
