commited by amol

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ http://www.tooplate.com/view/2098-health
                                              </label>
                                              <div class="col-sm-8 col-lg-8">
                                                   <input type="text" id="patient_name" class="form-control"
-                                                       placeholder="patient_name"  name="patient_name">
+                                                       placeholder="patient name"  name="patient_name">
                                              </div>
                                         </div>
                                         <!---->
