commited by amol

--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ http://www.tooplate.com/view/2098-health
                   dataType: 'json',
                   success: function (response) {
                      console.log(response);
-                     $("#contact-form")[0].reset();
+                     $("#appointment-form")[0].reset();
                     alert("Your Response has recorded successfull.");
                                         },
                         error: function (request, status, error) {
