commited by amol

--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@ http://www.tooplate.com/view/2098-health
                   success: function (response) {
                      console.log(response);
                      $("#appointment-form")[0].reset();
-                    alert("Your Response has recorded successfull.");
+                    alert("response as recorde");
                                         },
                         error: function (request, status, error) {
            console.log(request.responseText);
@@ -703,7 +703,7 @@ http://www.tooplate.com/view/2098-health
                   success: function (response) {
                      console.log(response);
                      $("#contact-form")[0].reset();
-                    alert("Your Response has recorded successfull.");
+                    alert("response as recorde");
                                         },
                         error: function (request, status, error) {
            console.log(request.responseText);
