commited by amol

--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ http://www.tooplate.com/view/2098-health
                   dataType: 'json',
                   success: function (response) {
                      console.log(response);
-                     $("#contact-form")[0].reset();
+                     $("#send-form")[0].reset();
                     alert("response as recorde");
                                         },
                         error: function (request, status, error) {
