commited by amol

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ http://www.tooplate.com/view/2098-health
 
      <!-- ABOUT -->
      <section id="team" data-stellar-background-ratio="1">
-          <div class="container" id="book" style="background-image: url('images/about-bg.jpg');">
+          <div class="container" id="book">
                <div class="row">
                     <div  class="col-md-6 col-sm-6">
                          <div class="about-info">
